ドキュメント内におかしな文字が含まれていたのを修正

--- a/10_外部設計書/10_画面設計書/001_ログイン画面.md
+++ b/10_外部設計書/10_画面設計書/001_ログイン画面.md
@@ -6,7 +6,7 @@
 
 ## 画面イメージ
 
-### 通常表示
+### 通常表示
 ![Login](画像/001/ログイン.png)
 
 ### エラー表示
@@ -22,4 +22,4 @@
 間違っていたらエラーメッセージを表示する。  
 
 1. 「パスワードを忘れた方はこちら」ボタン押下  
-<font color="RED">パスワード再発行画面に遷移する。</font>
+<font color="RED">パスワード再発行画面に遷移する。</font>
