--- a/10_外部設計書/20_データベース設計/005_言語マスタ.md
+++ b/10_外部設計書/20_データベース設計/005_言語マスタ.md
@@ -1,27 +1,27 @@
 # データベース設計書 - 言語マスタ
 
-## テーブル概要
+## テーブル概要
 
-|システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
+|システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
 |スキル管理システム|言語マスタ|MST_LANGUAGE|EJ根津|2018/10/06
 
-## カラム情報
+## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
+|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|:-:|:-:|:-:|---|---|
 |1|言語コード|LANGUAGE_CD|INT|○|||||
-|2|言語名|LANGUAGE_NAME|VARCHAR||○|○|||
+|2|言語名|LANGUAGE_NAME|VARCHAR||○|○|||
 |3|区分|CLASS_CD|INT||○||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
 |1|PK_MST_LANGUAGE|LANGUAGE_CD|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
 |1|FK_MST_LANGUAGE_1|CLASS_CD|MST_CLASS|CLASS_CD||
