--- a/10_外部設計書/20_データベース設計/103_保有資格テーブル.md
+++ b/10_外部設計書/20_データベース設計/103_保有資格テーブル.md
@@ -1,28 +1,28 @@
 # データベース設計書 - 保有資格テーブル
 
-## テーブル概要
+## テーブル概要
 
-|システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
+|システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
 |スキル管理システム|保有資格テーブル|TBL_QUALIFICATION|EJ根津|2018/10/06|
 
-## カラム情報
+## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
+|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|:-:|:-:|:-:|---|---|
 |1|ユーザーID|USER_ID|INT|○|||||
-|2|資格コード|QUALIFICATION_CD|INT|○|||||
+|2|資格コード|QUALIFICATION_CD|INT|○|||||
 |3|取得年月日|ACQUISITION_DATE|DATE||||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_TBL_PERSONAL|USER_ID,QUALIFICATION_CD|○|||
+|1|PK_TBL_PERSONAL|USER_ID,QUALIFICATION_CD|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
 |1|FK_TBL_QUALIFICATION_1|USER_ID|TBL_ACCOUNT|USER_ID||
 |1|FK_TBL_QUALIFICATION_2|QUALIFICATION_CD|MST_QUALIFICATION|QUALIFICATION_CD||
