--- a/10_外部設計書/20_データベース設計/002_企業マスタ.md
+++ b/10_外部設計書/20_データベース設計/002_企業マスタ.md
@@ -1,17 +1,17 @@
 # データベース設計書 - 企業マスタ
 
-## テーブル概要
+## テーブル概要
 
-|システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
+|システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
 |スキル管理システム|企業マスタ|MST_COMPANY|EJ根津|2018/10/06
 
-## カラム情報
+## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
+|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|:-:|:-:|:-:|---|---|
-|1|企業コード|COMPANY_CD|INT|○|||||
-|2|連番|SEQ_NO|INT|○|||||
+|1|企業コード|COMPANY_CD|INT|○|||||
+|2|連番|SEQ_NO|INT|○|||||
 |3|企業名|COMPANY_NAME|VARCHAR||○|○|||
 |4|郵便番号|ZIP_CD|VARCHAR||||||
 |5|住所|ADDRESS|VARCHAR||||||
@@ -19,13 +19,13 @@
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
 |1|PK_MST_COMPANY|COMPANY_CD,SEQ_NO|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
 
 
