--- a/10_外部設計書/20_データベース設計/004_OSマスタ.md
+++ b/10_外部設計書/20_データベース設計/004_OSマスタ.md
@@ -1,28 +1,28 @@
 # データベース設計書 - OSマスタ
 
-## テーブル概要
+## テーブル概要
 
-|システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
+|システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
 |スキル管理システム|OSマスタ|MST_OS|EJ根津|2018/10/06
 
-## カラム情報
+## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
+|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|:-:|:-:|:-:|---|---|
 |1|OSコード|OS_CD|INT|○|||||
-|2|OS名|OS_NAME|VARCHAR||○|○|||
+|2|OS名|OS_NAME|VARCHAR||○|○|||
 |3|区分|CLASS_CD|INT||○||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
 |1|PK_MST_OS|OS_CD|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
 |1|FK_MST_OS_1|CLASS_CD|MST_CLASS|CLASS_CD||
 
