--- a/10_外部設計書/20_データベース設計/003_資格マスタ.md
+++ b/10_外部設計書/20_データベース設計/003_資格マスタ.md
@@ -19,7 +19,7 @@
 
 |No|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_MST_QUALIFICATION|QUALIFICATION_CD,SEQ_NO|○|||
+|1|PK_MST_QUALIFICATION|QUALIFICATION_CD,SEQ_NO|○|||
 
 ## 外部キー情報
 
