--- a/10_外部設計書/20_データベース設計/006_ツールマスタ.md
+++ b/10_外部設計書/20_データベース設計/006_ツールマスタ.md
@@ -18,7 +18,7 @@
 
 |No|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_MST_TOOL|TOOL_CD|○|||
+|1|PK_MST_TOOL|TOOL_CD|○|||
 
 ## 外部キー情報
 
