カラムに桁数を追加 項目名を小文字に変更

--- a/10_外部設計書/20_データベース設計/003_資格マスタ.md
+++ b/10_外部設計書/20_データベース設計/003_資格マスタ.md
@@ -4,27 +4,27 @@
 
 |システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
-|スキル管理システム|資格マスタ|MST_QUALIFICATION|EJ根津|2018/10/06
+|スキル管理システム|資格マスタ|mst_qualification|EJ根津|2018/10/06
 
 ## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
-|---|---|---|---|:-:|:-:|:-:|---|---|
-|1|資格コード|QUALIFICATION_CD|INT|○|||||
-|2|連番|SEQ_NO|INT|○|||||
-|3|資格名|QUALIFICATION_NAME|VARCHAR||○|○|||
-|4|区分|CLASS_CD|VARCHAR||○||||
+|No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
+|---|---|---|---|--:|:-:|:-:|:-:|---|---|
+|1|資格コード|qualification_cd|int||○|||||
+|2|連番|seq_no|int||○|||||
+|3|資格名|qualification_name|varchar|64||○|○|||
+|4|区分|class_cd|int|||○||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_MST_QUALIFICATION|QUALIFICATION_CD,SEQ_NO|○|||
+|1|pk_mst_qualification|qualification_cd,seq_no|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|FK_MST_QUALIFICATION_1|CLASS_CD|MST_CLASS|CLASS_CD||
+|1|fk_mst_qualification_1|class_cd|mst_class|class_cd||
 
 
