--- a/10_外部設計書/20_データベース設計/005_言語マスタ.md
+++ b/10_外部設計書/20_データベース設計/005_言語マスタ.md
@@ -4,24 +4,24 @@
 
 |システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
-|スキル管理システム|言語マスタ|MST_LANGUAGE|EJ根津|2018/10/06
+|スキル管理システム|言語マスタ|mst_language|EJ根津|2018/10/06
 
 ## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
-|---|---|---|---|:-:|:-:|:-:|---|---|
-|1|言語コード|LANGUAGE_CD|INT|○|||||
-|2|言語名|LANGUAGE_NAME|VARCHAR||○|○|||
-|3|区分|CLASS_CD|INT||○||||
+|No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
+|---|---|---|---|--:|:-:|:-:|:-:|---|---|
+|1|言語コード|language_cd|int||○|||||
+|2|言語名|language_name|varchar|64||○|○|||
+|3|区分|class_cd|int|||○||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_MST_LANGUAGE|LANGUAGE_CD|○|||
+|1|pk_mst_language|language_cd|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|FK_MST_LANGUAGE_1|CLASS_CD|MST_CLASS|CLASS_CD||
+|1|fk_mst_language_1|class_cd|mst_class|class_cd||
