--- a/10_外部設計書/20_データベース設計/007_DBマスタ.md
+++ b/10_外部設計書/20_データベース設計/007_DBマスタ.md
@@ -4,24 +4,24 @@
 
 |システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
-|スキル管理システム|DBマスタ|MST_DB|EJ根津|2018/10/06
+|スキル管理システム|DBマスタ|mst_db|EJ根津|2018/10/06
 
 ## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
-|---|---|---|---|:-:|:-:|:-:|---|---|
-|1|DBコード|DB_CD|INT|○|||||
-|2|DB名|DB_NAME|VARCHAR||○|○|||
-|3|区分|CLASS_CD|INT||○||||
+|No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
+|---|---|---|---|--:|:-:|:-:|:-:|---|---|
+|1|dbコード|db_cd|int||○|||||
+|2|db名|db_name|varchar|64||○|○|||
+|3|区分|class_cd|int|||○||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_MST_DB|DB_CD|○|||
+|1|pk_mst_db|db_cd|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|FK_MST_DB_1|DB_CD|MST_CLASS|DB_CD||
+|1|fk_mst_db_1|db_cd|mst_class|db_cd||
