--- a/10_外部設計書/20_データベース設計/101_アカウントテーブル.md
+++ b/10_外部設計書/20_データベース設計/101_アカウントテーブル.md
@@ -4,27 +4,27 @@
 
 |システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
-|スキル管理システム|アカウントテーブル|TBL_ACCOUNT|EJ根津|2018/10/06
+|スキル管理システム|アカウントテーブル|tbl_account|EJ根津|2018/10/06
 
 ## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
-|---|---|---|---|:-:|:-:|:-:|---|---|
-|1|ユーザーID|USER_ID|INT|○|||||
-|2|メールアドレス|MAIL_ADDRESS|VARCHAR||○|○|||
-|3|パスワード|PASSWORD|VARCHAR||○||||
-|4|権限|AUTHORITY|VARCHAR||○||||
+|No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
+|---|---|---|---|--:|:-:|:-:|:-:|---|---|
+|1|ユーザーID|user_id|int||○|||||
+|2|メールアドレス|email|varchar|||○|○|||
+|3|パスワード|password|varchar|||○||||
+|4|スタッフ権限|is_staff|boolean|||○||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_TBL_ACCOUNT|USER_ID|○|||
-|2|IX_TBL_ACCOUNT_1|MAIL_ADDRESS||○||
+|1|pk_tbl_account|user_id|○|||
+|2|ix_tbl_account_1|mail_address||○||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
 |||||||
 
