--- a/10_外部設計書/20_データベース設計/102_個人テーブル.md
+++ b/10_外部設計書/20_データベース設計/102_個人テーブル.md
@@ -4,33 +4,33 @@
 
 |システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
-|スキル管理システム|個人テーブル|TBL_PERSONAL|EJ根津|2018/10/06
+|スキル管理システム|個人テーブル|tbl_personal|EJ根津|2018/10/06
 
 ## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
-|---|---|---|---|:-:|:-:|:-:|---|---|
-|1|ユーザーID|USER_ID|INT|○|||||
-|2|姓|LAST_NAME|VARCHAR||||||
-|3|姓かな|LAST_NAME_KANA|VARCHAR||||||
-|4|名|FIRST_NAME|VARCHAR||||||
-|5|名かな|FIRST_NAME_KANA|VARCHAR||||||
-|6|イニシャル|INITIAL|VARCHAR||||||
-|7|生年月日|BIRTHDAY|VARCHAR||||||
-|8|最寄り駅|NEAREST_STATION|VARCHAR||||||
-|9|健康状態|HEALTH|VARCHAR||||||
-|10|所属企業|COMPANY_CD|VARCHAR||||||
+|No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
+|---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
+|1|ユーザーID|user_id|int||○|||||
+|2|姓|last_name|varchar|16||||||
+|3|姓かな|last_name_kana|varchar|16||||||
+|4|名|first_name|varchar|16||||||
+|5|名かな|first_name_kana|varchar|16||||||
+|6|イニシャル|initial|varchar|3||||||
+|7|生年月日|birthday|date|||||||
+|8|最寄り駅|nearest_station|varchar|32||||||
+|9|健康状態|health|varchar|256||||||
+|10|所属企業|company_cd|int|||||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_TBL_PERSONAL|USER_ID|○|||
+|1|pk_tbl_personal|user_id|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|FK_TBL_PERSONAL_1|USER_ID|TBL_ACCOUNT|USER_ID||
-|2|FK_TBL_PERSONAL_2|COMPANY_CD|MST_COMPANY|COMPANY_CD|
+|1|fk_tbl_personal_1|user_id|tbl_account|user_id||
+|2|fk_tbl_personal_2|company_cd|mst_company|company_cd|
 
