--- a/10_外部設計書/20_データベース設計/001_区分マスタ.md
+++ b/10_外部設計書/20_データベース設計/001_区分マスタ.md
@@ -4,29 +4,29 @@
 
 |システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
-|スキル管理システム|区分マスタ|MST_CLASS|EJ根津|2018/10/06
+|スキル管理システム|区分マスタ|mst_class|EJ根津|2018/10/06
 
 
 ## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
-|---|---|---|---|:-:|:-:|:-:|---|---|
-|1|区分|CLASS|INT|○|||||
-|2|区分名|CLASS_NAME|VARCHAR||○||||
-|3|分類1|TYPE1|INT||○||||
-|4|分類2|TYPE2|INT||○||||
-|5|分類3|TYPE3|INT||○||||
+|No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
+|---|---|---|---|--:|:-:|:-:|:-:|---|---|
+|1|区分コード|class_cd|int||○|||||
+|2|区分名|class_name|varchar|64||○||||
+|3|分類1|type_1|int|||○||||
+|4|分類2|type_2|int|||○||||
+|5|分類3|type_3|int|||○||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_MST_CLASS|CLASS|○|||
-|2|IX_MST_CLASS_1|TYPE1,TPYE2,TYPE3||○||
+|1|pk_mst_class|class|○|||
+|2|ix_mstß_class_1|type1,tpye2,type3||○||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
 |||||||
 
