--- a/10_外部設計書/20_データベース設計/006_ツールマスタ.md
+++ b/10_外部設計書/20_データベース設計/006_ツールマスタ.md
@@ -4,24 +4,24 @@
 
 |システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
-|スキル管理システム|ツールマスタ|MST_TOOL|EJ根津|2018/10/06
+|スキル管理システム|ツールマスタ|mst_tool|EJ根津|2018/10/06
 
 ## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
-|---|---|---|---|:-:|:-:|:-:|---|---|
-|1|ツールコード|TOOL_CD|INT|○|||||
-|2|ツール名|TOOL_NAME|VARCHAR||○|○|||
-|3|区分|CLASS_CD|INT||○||||
+|No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
+|---|---|---|---|--:|:-:|:-:|:-:|---|---|
+|1|ツールコード|tool_cd|int||○|||||
+|2|ツール名|tool_name|varchar|64||○|○|||
+|3|区分|class_cd|int|||○||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_MST_TOOL|TOOL_CD|○|||
+|1|pk_mst_tool|tool_cd|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|FK_MST_TOOL_1|TOOL_CD|MST_CLASS|CLASS_CD||
+|1|fk_mst_tool_1|tool_cd|mst_class|class_cd||
