--- a/10_外部設計書/20_データベース設計/103_保有資格テーブル.md
+++ b/10_外部設計書/20_データベース設計/103_保有資格テーブル.md
@@ -4,26 +4,26 @@
 
 |システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
-|スキル管理システム|保有資格テーブル|TBL_QUALIFICATION|EJ根津|2018/10/06|
+|スキル管理システム|保有資格テーブル|tbl_qualification|EJ根津|2018/10/06|
 
 ## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
-|---|---|---|---|:-:|:-:|:-:|---|---|
-|1|ユーザーID|USER_ID|INT|○|||||
-|2|資格コード|QUALIFICATION_CD|INT|○|||||
-|3|取得年月日|ACQUISITION_DATE|DATE||||||
+|No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
+|---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
+|1|ユーザーID|user_id|int||○|||||
+|2|資格コード|qualification_cd|int||○|||||
+|3|取得年月日|acquisition_date|date|||||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_TBL_PERSONAL|USER_ID,QUALIFICATION_CD|○|||
+|1|pk_tbl_personal|user_id,qualification_cd|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|FK_TBL_QUALIFICATION_1|USER_ID|TBL_ACCOUNT|USER_ID||
-|1|FK_TBL_QUALIFICATION_2|QUALIFICATION_CD|MST_QUALIFICATION|QUALIFICATION_CD||
+|1|fk_tbl_qualification_1|user_id|tbl_account|user_id||
+|1|fk_tbl_qualification_2|qualification_cd|mst_qualification|qualification_cd||
 
