--- a/10_外部設計書/20_データベース設計/104_経歴テーブル.md
+++ b/10_外部設計書/20_データベース設計/104_経歴テーブル.md
@@ -4,32 +4,32 @@
 
 |システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
-|スキル管理システム|経歴テーブル|TBL_CAREER|EJ根津|2018/10/06|
+|スキル管理システム|経歴テーブル|tbl_career|EJ根津|2018/10/06|
 
 ## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
-|---|---|---|---|:-:|:-:|:-:|---|---|
-|1|ユーザーID|USER_ID|INT|○|||||
-|2|経歴NO|CAREER_NO|INT|○|||||
-|3|開始日|START_DATE|DATE||○||||
-|4|終了日|END_DATE|DATE||||||
-|5|プロジェクト名|PROJECT_NAME|VARCHAR||||||
-|6|作業内容|WORK_DISCRIPTION|VARCHAR||||||
-|7|作業区分|WORK_TYPE|INT|||||<font color="red">これなに？</font>|
-|8|メンバー数|MEMBER_COUNT|INT||||||
-|9|ポジション|POSITION|INT|||||1:PM 2:PL 3:SE 4:PG|
-|10|所属企業|COMPANY_CD|DATE||||||
-|11|最寄り駅|NEAREST_STATION|DATE||||||
+|No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
+|---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
+|1|ユーザーID|user_id|int||○|||||
+|2|経歴NO|career_no|int||○|||||
+|3|開始日|start_date|date|||○||||
+|4|終了日|end_date|date|||||||
+|5|プロジェクト名|project_name|varchar|64||||||
+|6|作業内容|work_discription|varchar|128||||||
+|7|作業区分|work_type|int||||||<font color="red">これなに？</font>|
+|8|メンバー数|member_count|int|||||||
+|9|ポジション|position|int||||||1:pm 2:pl 3:se 4:pg|
+|10|所属企業|company_cd|date|||||||
+|11|最寄り駅|nearest_station|varchar|32||||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_TBL_CAREER|USER_ID,CAREER_NO|○|||
+|1|pk_tbl_career|user_id,career_no|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|FK_CAREER_NO_1|USER_ID|MST_ACCOUNT|USER_ID||
+|1|fk_career_no_1|user_id|mst_account|user_id||
