--- a/10_外部設計書/20_データベース設計/106_経歴言語テーブル.md
+++ b/10_外部設計書/20_データベース設計/106_経歴言語テーブル.md
@@ -4,27 +4,27 @@
 
 |システム名称|テーブル名|物理名称|作成者|作成日|更新者|更新日  
 |---|---|---|---|---|---|---|
-|スキル管理システム|経歴言語テーブル|TBL_CAREER_LANGUAGE|EJ根津|2018/10/06|
+|スキル管理システム|経歴言語テーブル|tbl_career_language|EJ根津|2018/10/06|
 
 ## カラム情報
 
-|No|論理名称|物理名称|データ型|PK|Not Null|ユニーク|デフォルト|備考|  
-|---|---|---|---|:-:|:-:|:-:|---|---|
-|1|ユーザーID|USER_ID|INT|○|||||
-|2|職歴NO|CAREER_NO|INT|○|||||
-|3|言語コード|LANGUAGE_CD|INT|○|||||
-|4|表示順|DISP_ORDER|INT||○||||
+|No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
+|---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
+|1|ユーザーid|user_id|int||○|||||
+|2|職歴no|career_no|int||○|||||
+|3|言語コード|language_cd|int||○|||||
+|4|表示順|disp_order|int|||○||||
 
 ## インデックス情報
 
-|No|インデックス名|カラムリスト|主キー|ユニーク|備考|
+|no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|PK_TBL_CAREER_LANGUAGE|USER_ID,CAREER_NO,LANGUAGE_CD|○|||
+|1|pk_tbl_career_language|user_id,career_no,language_cd|○|||
 
 ## 外部キー情報
 
-|No|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
+|no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|FK_TBL_CAREER_LANGUAGE_1|USER_ID|TBL_ACCOUNT|USER_ID||
-|1|FK_TBL_CAREER_LANGUAGE_2|LANGUAGE_CD|MST_LANGUAGE|LANGUAGE_CD||
+|1|fk_tbl_career_language_1|user_id|tbl_account|user_id||
+|1|fk_tbl_career_language_2|language_cd|mst_language|language_cd||
 
