各テーブルの主キーをサロゲートキーに変更

--- a/10_外部設計書/20_データベース設計/001_区分マスタ.md
+++ b/10_外部設計書/20_データベース設計/001_区分マスタ.md
@@ -11,7 +11,7 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|--:|:-:|:-:|:-:|---|---|
-|1|区分コード|class_cd|int||○|||||
+|1|ID|id|int||○|||||
 |2|区分名|class_name|varchar|64||○||||
 |3|分類1|type_1|int|||○||||
 |4|分類2|type_2|int|||○||||
@@ -21,7 +21,7 @@
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|pk_mst_class|class|○|||
+|1|pk_mst_class|id|○|||
 |2|ix_mstß_class_1|type1,tpye2,type3||○||
 
 ## 外部キー情報
