--- a/10_外部設計書/20_データベース設計/003_資格マスタ.md
+++ b/10_外部設計書/20_データベース設計/003_資格マスタ.md
@@ -10,21 +10,23 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|--:|:-:|:-:|:-:|---|---|
-|1|資格コード|qualification_cd|int||○|||||
-|2|連番|seq_no|int||○|||||
-|3|資格名|qualification_name|varchar|64||○|○|||
-|4|区分|class_cd|int|||○||||
+|1|ID|id|int||○|||||
+|2|資格コード|qualification_cd|int|||||||
+|3|連番|seq_no|int|||||||
+|4|資格名|qualification_name|varchar|64||○|○|||
+|5|区分|class_id|int|||○||||
 
 ## インデックス情報
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|pk_mst_qualification|qualification_cd,seq_no|○|||
+|1|pk_mst_qualification|id|○|||
+|1|ix_mst_qualification|qualification_cd,seq_no||○||
 
 ## 外部キー情報
 
 |no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|fk_mst_qualification_1|class_cd|mst_class|class_cd||
+|1|fk_mst_qualification_1|class_id|mst_class|id||
 
 
