--- a/10_外部設計書/20_データベース設計/004_OSマスタ.md
+++ b/10_外部設計書/20_データベース設計/004_OSマスタ.md
@@ -10,20 +10,20 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|--:|:-:|:-:|:-:|---|---|
-|1|osコード|os_cd|int||○|||||
+|1|ID|id|int||○|||||
 |2|os名|os_name|varchar|64||○|○|||
-|3|区分|class_cd|int|||○||||
+|3|区分|class_id|int|||○||||
 
 ## インデックス情報
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|pk_mst_os|os_cd|○|||
+|1|pk_mst_os|id|○|||
 
 ## 外部キー情報
 
 |no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|fk_mst_os_1|class_cd|mst_class|class_cd||
+|1|fk_mst_os_1|class_id|mst_class|id||
 
 
