--- a/10_外部設計書/20_データベース設計/102_個人テーブル.md
+++ b/10_外部設計書/20_データベース設計/102_個人テーブル.md
@@ -10,7 +10,7 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
-|1|ユーザーID|user_id|int||○|||||
+|1|ユーザーID|user_id|int|||||||
 |2|姓|last_name|varchar|16||||||
 |3|姓かな|last_name_kana|varchar|16||||||
 |4|名|first_name|varchar|16||||||
@@ -31,6 +31,5 @@
 
 |no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|fk_tbl_personal_1|user_id|tbl_account|user_id||
-|2|fk_tbl_personal_2|company_cd|mst_company|company_cd|
-
+|1|fk_tbl_personal_1|user_id|tbl_account|id||
+|2|fk_tbl_personal_2|company_id|mst_company|id|
