--- a/10_外部設計書/20_データベース設計/103_保有資格テーブル.md
+++ b/10_外部設計書/20_データベース設計/103_保有資格テーブル.md
@@ -10,20 +10,22 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
-|1|ユーザーID|user_id|int||○|||||
-|2|資格コード|qualification_cd|int||○|||||
-|3|取得年月日|acquisition_date|date|||||||
+|1|ID|id|int||○|||||
+|2|ユーザーID|user_id|int|||○||||
+|3|資格コード|qualification_id|int|||○||||
+|4|取得年月日|acquisition_date|date|||||||
 
 ## インデックス情報
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|pk_tbl_personal|user_id,qualification_cd|○|||
+|1|pk_tbl_personal|id|○|||
+|1|ix_tbl_personal_1|user_id,qualification_id||○||
 
 ## 外部キー情報
 
 |no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|fk_tbl_qualification_1|user_id|tbl_account|user_id||
-|1|fk_tbl_qualification_2|qualification_cd|mst_qualification|qualification_cd||
+|1|fk_tbl_qualification_1|user_id|tbl_account|id||
+|1|fk_tbl_qualification_2|qualification_id|mst_qualification|id||
 
