--- a/10_外部設計書/20_データベース設計/002_企業マスタ.md
+++ b/10_外部設計書/20_データベース設計/002_企業マスタ.md
@@ -10,18 +10,20 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|--:|:-:|:-:|:-:|---|---|
-|1|企業コード|company_cd|int||○|||||
-|2|連番|seq_no|int||○|||||
-|3|企業名|company_name|varchar|64||○|○|||
-|4|郵便番号|zip_cd|varchar|8||||||
-|5|住所|address|varchar|128||||||
-|6|電話番号|tel_no|varchar|16||||||
+|1|ID|id|int||○|||||
+|2|企業コード|company_cd|int|||||||
+|3|連番|seq_no|int|||||||
+|4|企業名|company_name|varchar|64||○|○|||
+|5|郵便番号|zip_cd|varchar|8||||||
+|6|住所|address|varchar|128||||||
+|7|電話番号|tel_no|varchar|16||||||
 
 ## インデックス情報
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|pk_mst_company|company_cd,seq_no|○|||
+|1|pk_mst_company|id|○|||
+|2|ix_mst_company_1|company_cd,seq_no||○||
 
 ## 外部キー情報
 
