--- a/10_外部設計書/20_データベース設計/007_DBマスタ.md
+++ b/10_外部設計書/20_データベース設計/007_DBマスタ.md
@@ -10,18 +10,18 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|--:|:-:|:-:|:-:|---|---|
-|1|dbコード|db_cd|int||○|||||
-|2|db名|db_name|varchar|64||○|○|||
-|3|区分|class_cd|int|||○||||
+|1|ID|id|int||○|||||
+|2|DB名|db_name|varchar|64||○|○|||
+|3|区分|class_id|int|||○||||
 
 ## インデックス情報
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|pk_mst_db|db_cd|○|||
+|1|pk_mst_db|id|○|||
 
 ## 外部キー情報
 
 |no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|fk_mst_db_1|db_cd|mst_class|db_cd||
+|1|fk_mst_db_1|class_id|mst_class|id||
