--- a/10_外部設計書/20_データベース設計/101_アカウントテーブル.md
+++ b/10_外部設計書/20_データベース設計/101_アカウントテーブル.md
@@ -10,7 +10,7 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|--:|:-:|:-:|:-:|---|---|
-|1|ユーザーID|user_id|int||○|||||
+|1|ID|id|int||○|||||
 |2|メールアドレス|email|varchar|||○|○|||
 |3|パスワード|password|varchar|||○||||
 |4|スタッフ権限|is_staff|boolean|||○||||
@@ -19,7 +19,7 @@
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|pk_tbl_account|user_id|○|||
+|1|pk_tbl_account|id|○|||
 |2|ix_tbl_account_1|mail_address||○||
 
 ## 外部キー情報
