--- a/10_外部設計書/20_データベース設計/104_経歴テーブル.md
+++ b/10_外部設計書/20_データベース設計/104_経歴テーブル.md
@@ -10,26 +10,29 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
-|1|ユーザーID|user_id|int||○|||||
-|2|経歴NO|career_no|int||○|||||
-|3|開始日|start_date|date|||○||||
-|4|終了日|end_date|date|||||||
-|5|プロジェクト名|project_name|varchar|64||||||
-|6|作業内容|work_discription|varchar|128||||||
-|7|作業区分|work_type|int||||||<font color="red">これなに？</font>|
-|8|メンバー数|member_count|int|||||||
-|9|ポジション|position|int||||||1:pm 2:pl 3:se 4:pg|
-|10|所属企業|company_cd|date|||||||
-|11|最寄り駅|nearest_station|varchar|32||||||
+|1|ID|id|int||○|||||
+|2|ユーザーID|user_id|int|||○||||
+|3|経歴No|career_no|int|||○||||
+|4|開始日|start_date|date|||○||||
+|5|終了日|end_date|date|||||||
+|6|プロジェクト名|project_name|varchar|64||||||
+|7|作業内容|work_discription|varchar|128||||||
+|8|作業区分|work_type|int||||||<font color="red">これなに？</font>|
+|9|メンバー数|member_count|int|||||||
+|10|ポジション|position|int||||||1:pm 2:pl 3:se 4:pg|
+|11|所属企業|company_id|int|||||||
+|12|最寄り駅|nearest_station|varchar|32||||||
 
 ## インデックス情報
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|pk_tbl_career|user_id,career_no|○|||
+|1|pk_tbl_career|id|○|||
+|1|ix_tbl_career_1|user_id,career_no||○||
 
 ## 外部キー情報
 
 |no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|fk_career_no_1|user_id|mst_account|user_id||
+|1|fk_career_no_1|user_id|mst_account|id||
+|2|fk_career_no_2|company_id|mst_company|id||
