--- a/10_外部設計書/20_データベース設計/105_経歴OSテーブル.md
+++ b/10_外部設計書/20_データベース設計/105_経歴OSテーブル.md
@@ -10,21 +10,23 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
-|1|ユーザーid|user_id|int||○|||||
-|2|職歴no|career_no|int||○|||||
-|3|osコード|os_cd|int||○|||||
+|1|ID|id|int||○|||||
+|1|ユーザーID|user_id|int|||○||||
+|2|職歴No|career_no|int|||○||||
+|3|osコード|os_id|int|||○||||
 |4|表示順|disp_order|int|||○||||
 
 ## インデックス情報
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|pk_tbl_career_os|user_id,career_no,os_cd|○|||
+|1|pk_tbl_career_os|id|○|||
+|2|ix_tbl_career_os_1|user_id,career_no,os_id||○||
 
 ## 外部キー情報
 
 |no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|fk_tbl_career_os_1|user_id|tbl_account|user_id||
-|1|fk_tbl_career_os_2|os_cd|mst_os|os_cd||
+|1|fk_tbl_career_os_1|user_id|tbl_account|id||
+|1|fk_tbl_career_os_2|os_cd|mst_os|id||
 
