--- a/10_外部設計書/20_データベース設計/107_経歴ツールテーブル.md
+++ b/10_外部設計書/20_データベース設計/107_経歴ツールテーブル.md
@@ -10,21 +10,23 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
-|1|ユーザーid|user_id|int||○|||||
-|2|職歴no|career_no|int||○|||||
-|3|言語コード|tool_cd|int||○|||||
-|4|表示順|disp_order|int|||○||||
+|1|ID|id|int||○|||||
+|2|ユーザーid|user_id|int|||○||||
+|3|職歴No|career_no|int|||○||||
+|4|言語コード|tool_id|int|||○||||
+|5|表示順|disp_order|int|||○||||
 
 ## インデックス情報
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
-|1|pk_tbl_career_tool|user_id,career_no,tool_cd|○|||
+|1|pk_tbl_career_tool|id|○|||
+|1|ix_tbl_career_tool_1|user_id,career_no,tool_id||○||
 
 ## 外部キー情報
 
 |no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|fk_tbl_career_tool_1|user_id|tbl_account|user_id||
-|1|fk_tbl_career_tool_2|tool_cd|mst_tool|tool_cd||
+|1|fk_tbl_career_tool_1|user_id|tbl_account|id||
+|1|fk_tbl_career_tool_2|tool_id|mst_tool|id||
 
