サロゲートキーに変更

--- a/10_外部設計書/20_データベース設計/106_経歴言語テーブル.md
+++ b/10_外部設計書/20_データベース設計/106_経歴言語テーブル.md
@@ -11,22 +11,21 @@
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
 |1|ID|id|int||○|||||
-|2|ユーザーID|user_id|int|||○||||
-|3|職歴No|career_no|int|||○||||
-|4|言語コード|language_id|int|||○||||
-|5|表示順|disp_order|int|||○||||
+|2|経歴ID|career_id|int|||○||||
+|3|言語コード|language_id|int|||○||||
+|4|表示順|disp_order|int|||○||||
 
 ## インデックス情報
 
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
 |1|pk_tbl_career_language|id|○|||
-|2|ix_tbl_career_language_1|user_id,career_no,language_id||○||
+|2|ix_tbl_career_language_1|user_id,career_id||○||
 
 ## 外部キー情報
 
 |no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|fk_tbl_career_language_1|user_id|tbl_account|id||
+|1|fk_tbl_career_language_1|career_id|tbl_career|id||
 |2|fk_tbl_career_language_2|language_id|mst_language|id||
 
