--- a/10_外部設計書/20_データベース設計/001_区分マスタ.md
+++ b/10_外部設計書/20_データベース設計/001_区分マスタ.md
@@ -22,7 +22,7 @@
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
 |1|pk_mst_class|id|○|||
-|2|ix_mstß_class_1|type1,tpye2,type3||○||
+|2|ix_mst_class_1|type1,tpye2,type3||○||
 
 ## 外部キー情報
 
