--- a/10_外部設計書/20_データベース設計/003_資格マスタ.md
+++ b/10_外部設計書/20_データベース設計/003_資格マスタ.md
@@ -11,8 +11,8 @@
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|---|--:|:-:|:-:|:-:|---|---|
 |1|ID|id|int||○|||||
-|2|資格コード|qualification_cd|int|||||||
-|3|連番|seq_no|int|||||||
+|2|資格コード|qualification_cd|int|||○||||
+|3|連番|seq_no|int|||○||||
 |4|資格名|qualification_name|varchar|64||○|○|||
 |5|区分|class_id|int|||○||||
 
@@ -21,7 +21,7 @@
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
 |1|pk_mst_qualification|id|○|||
-|1|ix_mst_qualification|qualification_cd,seq_no||○||
+|2|ix_mst_qualification|qualification_cd,seq_no||○||
 
 ## 外部キー情報
 
