--- a/10_外部設計書/20_データベース設計/102_個人テーブル.md
+++ b/10_外部設計書/20_データベース設計/102_個人テーブル.md
@@ -10,7 +10,7 @@
 
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
-|1|ユーザーID|user_id|int|||||||
+|1|ユーザーID|user_id|int||○|||||
 |2|姓|last_name|varchar|16||||||
 |3|姓かな|last_name_kana|varchar|16||||||
 |4|名|first_name|varchar|16||||||
