--- a/10_外部設計書/20_データベース設計/108_経歴DBテーブル.md
+++ b/10_外部設計書/20_データベース設計/108_経歴DBテーブル.md
@@ -11,8 +11,7 @@
 |No|論理名称|物理名称|データ型|桁数|PK|Not Null|ユニーク|デフォルト|備考|  
 |---|---|---|:-:|--:|:-:|:-:|:-:|---|---|
 |1|ID|id|int||○|||||
-|1|ユーザーID|user_id|int|||○||||
-|2|職歴No|career_no|int|||○||||
+|2|経歴ID|career_id|int|||○||||
 |3|DBコード|db_id|int|||○||||
 |4|表示順|disp_order|int|||○||||
 
@@ -21,12 +20,12 @@
 |no|インデックス名|カラムリスト|主キー|ユニーク|備考|
 |---|---|---|:-:|:-:|---|
 |1|pk_tbl_career_db|id|○|||
-|1|ix_tbl_career_db_1|user_id,career_no,db_id||○||
+|2|ix_tbl_career_db_1|career_id,db_id||○||
 
 ## 外部キー情報
 
 |no|外部キー名|カラムリスト|参照先テーブル名|参照先カラムリスト|備考|
 |---|---|---|---|---|---|
-|1|fk_tbl_career_db_1|user_id|tbl_account|id||
+|1|fk_tbl_career_db_1|career_id|tbl_career|id||
 |2|fk_tbl_career_db_2|db_id|mst_db|id||
 
